--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         </div>
     </div>
 
-    <script src="etapas.js"></script>
-    <script src="script.js"></script>
+    <script src="/etapas.js"></script>
+    <script src="/script.js"></script>
 </body>
 
 </html>
